# EdgeTx-linux

./: CMakeLists.txt  README.md  boards.h  lcdwidget.cpp  lcdwidget.h  main.cpp  simulatorinterface.h
